@@ -1,4 +1,5 @@
 0.3.4
+Added "Show Icons In Gtk3 Menus" to prefs.
 Code clean.
 Done popups.
 Done menus.
